--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name_bar">Name</string>
-    <string name="adress_bar">Adress</string>
+    <string name="address_bar">Address</string>
     <string name="count_piple_in_bar">Count</string>
+    <string name="link">Link</string>
+    <string name="author">Author</string>
+    <string name="description">Description</string>
+    <string name="price">Price</string>
 </resources>
